[gd_scene format=3 uid="uid://dk2vek5juj53o"]

[ext_resource type="Script" uid="uid://g8ghju6iqxmv" path="res://Scripts/EventRoom.gd" id="1_6wpk6"]
[ext_resource type="PackedScene" uid="uid://cewadnjen7l21" path="res://Scenes/RunStatusOverlay.tscn" id="2_fxxab"]
[ext_resource type="Script" uid="uid://bbvo786h2peys" path="res://Scripts/SoundButton.gd" id="2_sn8o1"]

[node name="Control" type="Control" unique_id=1909866210]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wpk6")

[node name="ColorRect" type="ColorRect" parent="." unique_id=870189449]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21752068, 0.25988293, 0.28133178, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=249236661]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer" unique_id=1756662741]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "TITLE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=2058298349]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxContainer" unique_id=761346469]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
bbcode_enabled = true
text = "Description"
fit_content = true
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" unique_id=1644339435]
layout_mode = 2

[node name="OptionA" type="Button" parent="VBoxContainer" unique_id=836324434]
layout_mode = 2
text = "A"
script = ExtResource("2_sn8o1")

[node name="OptionB" type="Button" parent="VBoxContainer" unique_id=696738110]
layout_mode = 2
text = "B"
script = ExtResource("2_sn8o1")

[node name="OptionC" type="Button" parent="VBoxContainer" unique_id=961244133]
layout_mode = 2
text = "B"
script = ExtResource("2_sn8o1")

[node name="RunStatusOverlay" parent="." unique_id=353549742 instance=ExtResource("2_fxxab")]
